Spring 4.1.1 Support