@@ -1,4 +1,4 @@
-FROM eclipse-temurin:8-jdk-alpine
+FROM eclipse-temurin:25-jre-alpine
 
 # Setting Timezone to KST
 RUN apk add tzdata && \
@@ -14,4 +14,4 @@ COPY ${JAR_FILE} app.jar
 
 HEALTHCHECK --interval=10s --timeout=3s --retries=3 CMD curl -f http://127.0.0.1 || exit 1
 
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-server", "-jar", "/app.jar", "--SETTING_DIR=/kkutu-web-setting"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-Djava.security.egd=file:/dev/./urandom", "-server", "-jar", "/app.jar", "--SETTING_DIR=/kkutu-web-setting"]
